stop the profile image squishing on mobile view

--- a/_compass/_zimbabwe_overrides.scss
+++ b/_compass/_zimbabwe_overrides.scss
@@ -199,6 +199,9 @@ a {
 
 .profile-pic {
     position: static;
+    img {
+        height: auto;
+    }
     @media only all and (min-width: 640px) {
         max-width: 210px;
         margin-right: 30px;
@@ -385,6 +388,7 @@ ul.position-listing {
 
     .jekyll-search__select {
         width: 100%;
+        background-color: $colour_white;
     }
 
     .ui-autocomplete-input {
